[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scripts/ui/game_over_screen.gd" type="Script" id=1]
[ext_resource path="res://src/assets/sprites/ui/ui_theme.tres" type="Theme" id=2]

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.7 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 100.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 50 )
text = "游戏结束"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 200.0
margin_right = 150.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 50 )
text = "最终分数: 0"
align = 1
valign = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 200 )
custom_constants/separation = 20

[node name="RetryButton" type="Button" parent="MenuContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "重新开始"

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
text = "返回主菜单"